--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+#docker run -d -p 8080:8080 -p 50000:50000 -v /var/run/docker.sock:/var/run/docker.sock -v ~/jenkins:/var/jenkins_home --name jenkins jenkins/jenkins:lts
+
 version: '3'
 services:
   jenkins:
