--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 services:
   node-app:
     container_name: node-app
-    image: roxsross12/node-app:1.0.0 
+    image: REGISTRY/REPLACE:TAG
     ports:
       - 4000:4000
     restart: always
